# water-tracker

./: .gitignore  README.md  backup69.json  main.py  pyproject.toml  requirements.txt  watertracker.json
model/: __init__.py  profile.py
repository/: __init__.py  data_store.py
services/: __init__.py  profile_service.py  water_log_service.py
tests/: test_data_store.py  test_profile.py  test_profile_service.py
ui/: __init__.py  dashboard_frame.py  history_frame.py  main_window.py  profile_frame.py
util/: __init__.py
water_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
